# bevy-asset-load

./: Cargo.toml
assets/: example.json
src/: asset.rs  main.rs
